# pytest-postgres-isolation

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dbtest/: __init__.py
tests/: test_itworks.py
