[tool.poetry]
name = "dbtest"
version = "0.1.0"
description = ""
authors = ["Ryan Barth <ryan@barth.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
sqlalchemy = "^2.0.5.post1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
